chore: change address on invoices

--- a/templates/invoice/invoice.html
+++ b/templates/invoice/invoice.html
@@ -13,8 +13,8 @@
     <aside>
       <address id="from">
         Stichting De Jonge Onderzoekers
-        Computerweg 20A
-        3821 AB Amersfoort
+        Nijverheidsweg-Noord 77
+        3812 PK Amersfoort
         KvK Nr. 41188622
       </address>
 
