--- a/templates/stripcard_create.html
+++ b/templates/stripcard_create.html
@@ -19,7 +19,7 @@
                     {{ form.issue_date|add_class:'form-control' }}
                     <br/>
 
-                    <label for="id_issue_date">Vervaldatum *</label>
+                    <label for="id_expiration_date">Vervaldatum *</label>
                     {{ form.expiration_date|add_class:'form-control' }}
                     <br/>
 
