--- a/templates/two_factor/_base.html
+++ b/templates/two_factor/_base.html
@@ -6,9 +6,9 @@
 <head>
   <title>{% block title %}{% endblock %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" media="screen">
-  <script defer src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script defer src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <link href="{% static 'css/src/bootstrap4.min.css' %}" rel="stylesheet" media="screen">
+  <script defer src="{% static 'js/src/jquery.slim.min.js' %}"></script>
+  <script defer src="{% static 'js/src/bootstrap4.min.js' %}"></script>
   {% block extra_media %}{% endblock %}
 
   <!-- stylesheets -->
