feat: support expiration of stripcards (#91)
* chore(sec): use local versions of bootstrap/jquery files
* chore: upgrade to python 3.12

--- a/templates/stripcard_create.html
+++ b/templates/stripcard_create.html
@@ -19,6 +19,10 @@
                     {{ form.issue_date|add_class:'form-control' }}
                     <br/>
 
+                    <label for="id_expiration_date">Vervaldatum *</label>
+                    {{ form.expiration_date|add_class:'form-control' }}
+                    <br/>
+
                     <label for="id_count">Aantal slots *</label>
                     {{ form.count|add_class:'form-control' }}
                     <br/>
